Updated links in about page

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@ Technology has a funny way of weaving itself into every chapter of your life. If
 
 <h3>Background</h3>
 
-I've been around for quite some time, holding now more than 25 years of experience in the industr. I started building Computer Labs in the University [Universidad Autónoma de Madrid](https://www.uam.es), teaching introductory courses and becoming a SysAdmin. This is like being a Marine, "Once a Sysadmin, always a Sysadmin". I’ve seen the tech landscape shift from local data centers to the vast horizons of the hybrid cloud. I’m a firm believer that technology should be a catalyst for growth, and I’ve spent my career bridging the gap between high-level strategy and technical execution.
+I've been around for quite some time, holding now more than 25 years of experience in the industr. I started building Computer Labs in the University <a href="https://www.uam.es">Universidad Autónoma de Madrid</a>, teaching introductory courses and becoming a SysAdmin. This is like being a Marine, "Once a Sysadmin, always a Sysadmin". I’ve seen the tech landscape shift from local data centers to the vast horizons of the hybrid cloud. I’m a firm believer that technology should be a catalyst for growth, and I’ve spent my career bridging the gap between high-level strategy and technical execution.
 
-I hold a MsC. in Inorganic Chemistry [UAM](https://www.uam.es) as well as another MsC. in Computer Science [UOC](https://uoc.ed). You might think "What a waste of time!" ... well in some way it was indeed however, my roots in science help me keep myself accurate and document everything properly. It's interesting that I managed to go to the same University as the King of Spain and the same High School as the Queen of Spain ... both public institutions.
+I hold a MsC. in Inorganic Chemistry [UAM](https://www.uam.es) as well as another MsC. in Computer Science <a href="https://uoc.edu">UOC</a>. You might think "What a waste of time!" ... well in some way it was indeed however, my roots in science help me keep myself accurate and document everything properly. It's interesting that I managed to go to the same University as the King of Spain and the same High School as the Queen of Spain ... both public institutions.
 
 <figure>
     <img src="../assets/images/miguel_uco-2024-12.jpg">
@@ -27,11 +27,11 @@ From the world of defense, I moved into the heart of the open-source community. 
 I’ve had the privilege of working across diverse sectors, including manufacturing and retail, which has taught me that while the industry changes, the core challenge remains the same: empowering people through smart technology.
 
 <h3>Where I Am Today</h3>
-Currently, I am the Senior Director of Product Management for Linux at SUSE. It also includes Product Marketing and Operations. It’s a multi-faceted role where I coordinate high-impact products like [SUSE Linux Enterprise Server](https://www.suse.com/products/server/). My daily mission involves:
+Currently, I am the Senior Director of Product Management for Linux at SUSE. It also includes Product Marketing and Operations. It’s a multi-faceted role where I coordinate high-impact products like <a href="https://www.suse.com/products/server/">SUSE Linux Enterprise Server</a>. My daily mission involves:
 
- * Taking care of and leading diverse, distributed teams to drive business growth.
- * Managing complex operations and product roadmaps, including the recent launch of [SLES 16](https://www.suse.com/download/sles/).
- * Deepening customer intimacy and handling strategic escalations.
+<li> Taking care of and leading diverse, distributed teams to drive business growth.</li>
+<li> Managing complex operations and product roadmaps, including the recent launch of <a href="https://www.suse.com/download/sles/">SLES 16</a>.</li>
+<li> Deepening customer intimacy and handling strategic escalations.</li>
 
 In 2023, my team's efforts were recognized with the "Business Growth Impact" award, a testament to the +40% growth we brought to the SUSE Manager product line. What a nice product, BTW!.
 
