Minor improvements to content

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@ I hold a MsC. in Inorganic Chemistry [UAM](https://www.uam.es) as well as anothe
 <h3>A Journey Through Restricted Zones & Cloud Frontiers</h3>
 My professional path has been anything but linear. I’ve navigated high-stakes, security-restricted environments like Defense and Finance, ensuring that critical systems remain robust and compliant. Early in my career, I served as a representative for Spain in various NATO groups, coordinating international interoperability standards and technical architectures.
 
-From the world of defense, I moved into the heart of the open-source community. My decade-long tenure at Red Hat saw me wear many hats—from Senior Consultant and Solution Architect to Senior Principal Product Manager. I led the launch of vital tools like the Migration Toolkit for Virtualization and even had a stint as an official spokesperson. Later, at VMware Tanzu, I dove deep into R&D, focusing on edge architectures and even contributing to patents for resource reservation systems.
+From the world of defense, I moved into the heart of the open-source community. My decade-long tenure at Red Hat saw me wear many hats, from Senior Consultant and Solution Architect to Senior Principal Product Manager. I led the launch of vital tools like the Migration Toolkit for Virtualization and even had a stint as an official spokesperson. My interestin R&D made me contribute with a patent on resource reservation for Kubernetes environments. Later, at VMware Tanzu, I dove deep into R&D, focusing onKubernets and large deployment architectures.
 
-I’ve had the privilege of working across diverse sectors, including manufacturing and retail, which has taught me that while the industry changes, the core challenge remains the same: empowering people through smart technology.
+I’ve had the privilege of working across diverse sectors, with really nice people, including manufacturing and retail, which has taught me that while the industry changes, the core challenge remains the same: empowering people through technology.
 
 <h3>Where I Am Today</h3>
 Currently, I am the Senior Director of Product Management for Linux at SUSE. It also includes Product Marketing and Operations. It’s a multi-faceted role where I coordinate high-impact products like <a href="https://www.suse.com/products/server/">SUSE Linux Enterprise Server</a>. My daily mission involves:
@@ -33,7 +33,7 @@ Currently, I am the Senior Director of Product Management for Linux at SUSE. It 
 <li> Managing complex operations and product roadmaps, including the recent launch of <a href="https://www.suse.com/download/sles/">SLES 16</a>.</li>
 <li> Deepening customer intimacy and handling strategic escalations.</li>
 
-In 2023, my team's efforts were recognized with the "Business Growth Impact" award, a testament to the +40% growth we brought to the SUSE Manager product line. What a nice product, BTW!.
+In 2023, my team's efforts were recognized with the "Business Growth Impact" award, a testament to the +40% growth we brought to the SUSE Manager product line. What a nice product, and what a nice team!.
 
 <h3>Beyond the Screen</h3>
 When I’m not scaling enterprise products or diving into Kubernetes (yes, I’m a CKA and CKAD), you can usually find me pursuing my other passions. I’m an always beginning runner, but I also have a musical sider. I love playing the bass and guitar, and I even dabble in luthiery (the art of building and fixing them). Whether it's testing a new chemical compound or a new line of code, I’ve always been driven by curiosity.
