--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ author_profile: true
 classes: wide
 ---
 
-Technology has a funny way of weaving itself into every chapter of your life. If you’ve ever found yourself equally excited by a clean simple implementation of code to solve a complex issue, and a perfectly built Lego set, then we’re definitely on the same wavelength. My name is Miguel Pérez Colino, and I’m a technology enthusiast, open-source advocate, and product management devotee based in Madrid, Spain.
+Technology has a funny way of weaving itself into every chapter of our lives. If you’ve ever found yourself equally excited by a clean simple implementation of code to solve a complex issue, and a perfectly built Lego set, then we’re definitely on the same wavelength. My name is Miguel Pérez Colino, and I’m a technology enthusiast, open-source advocate, and product management devotee based in Madrid, Spain.
 
 <h3>Background</h3>
 
