--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@ Technology has a funny way of weaving itself into every chapter of our lives. If
 
 <h3>Background</h3>
 
-I've been around for quite some time, holding now more than 25 years of experience in the industr. I started building Computer Labs in the University <a href="https://www.uam.es">Universidad Autónoma de Madrid</a>, teaching introductory courses and becoming a SysAdmin. This is like being a Marine, "Once a Sysadmin, always a Sysadmin". I’ve seen the tech landscape shift from local data centers to the vast horizons of the hybrid cloud. I’m a firm believer that technology should be a catalyst for growth, and I’ve spent my career bridging the gap between high-level strategy and technical execution.
+I've been around for quite some time, holding now more than 25 years of experience in the industry. I started building Computer Labs in the University <a href="https://www.uam.es">Universidad Autónoma de Madrid</a>, teaching introductory courses and becoming a SysAdmin. This is like being a Marine, "Once a Sysadmin, always a Sysadmin". I’ve seen the tech landscape shift from local data centers to the vast horizons of the hybrid cloud. I’m a firm believer that technology should be a catalyst for growth, and I’ve spent my career bridging the gap between high-level strategy and technical execution.
 
-I hold a MsC. in Inorganic Chemistry <a href="https://www.uam.es">UAM</a> as well as another MsC. in Computer Science <a href="https://uoc.edu">UOC</a>. You might think "What a waste of time!" ... well in some way it was indeed however, my roots in science help me keep myself accurate and document everything properly. It's interesting that I managed to go to the same University as the King of Spain and the same High School as the Queen of Spain ... both public institutions.
+I hold a MsC. in Inorganic Chemistry <a href="https://www.uam.es">UAM</a> as well as another MsC. in Computer Science <a href="https://uoc.edu">UOC</a>. You might think "What a waste of time!" ... well in some way it was indeed, however, my roots in science help me keep myself accurate and document everything properly. It's interesting that I managed to go to the same University as the King of Spain and the same High School as the Queen of Spain ... both public institutions.
 
 <figure>
     <img src="../assets/images/miguel_uco-2024-12.jpg">
-    <figcaption>Me talking and listening to students in the Universidad de Córdoba, Spain.</figcaption>
+    <figcaption>Talking and listening to students in the Universidad de Córdoba, Spain.</figcaption>
 </figure>
 
 <h3>A Journey Through Restricted Zones & Cloud Frontiers</h3>
 My professional path has been anything but linear. I’ve navigated high-stakes, security-restricted environments like Defense and Finance, ensuring that critical systems remain robust and compliant. Early in my career, I served as a representative for Spain in various NATO groups, coordinating international interoperability standards and technical architectures.
 
-From the world of defense, I moved into the heart of the open-source community. My decade-long tenure at Red Hat saw me wear many hats, from Senior Consultant and Solution Architect to Senior Principal Product Manager. I led the launch of vital tools like the Migration Toolkit for Virtualization and even had a stint as an official spokesperson. My interestin R&D made me contribute with a patent on resource reservation for Kubernetes environments. Later, at VMware Tanzu, I dove deep into R&D, focusing onKubernets and large deployment architectures.
+From the world of defense, I moved into the heart of the open-source community. My decade-long tenure at Red Hat saw me wear many hats, from Senior Consultant and Solution Architect to Senior Principal Product Manager. I led the launch of vital tools like the Migration Toolkit for Virtualization and even had a stint as an official spokesperson. My interestin R&D made me contribute with a patent on resource reservation for Kubernetes environments. Later, at VMware Tanzu, I dove deep into R&D, focusing on Kubernetes and large deployment architectures.
 
 I’ve had the privilege of working across diverse sectors, with really nice people, including manufacturing and retail, which has taught me that while the industry changes, the core challenge remains the same: empowering people through technology.
 
