--- a/index.html
+++ b/index.html
@@ -29,9 +29,13 @@ I’ve had the privilege of working across diverse sectors, with really nice peo
 <h3>Where I Am Today</h3>
 Currently, I am the Senior Director of Product Management for Linux at SUSE. It also includes Product Marketing and Operations. It’s a multi-faceted role where I coordinate high-impact products like <a href="https://www.suse.com/products/server/">SUSE Linux Enterprise Server</a>. My daily mission involves:
 
+<p>
 <li> Taking care of and leading diverse, distributed teams to drive business growth.</li>
 <li> Managing complex operations and product roadmaps, including the recent launch of <a href="https://www.suse.com/download/sles/">SLES 16</a>.</li>
 <li> Deepening customer intimacy and handling strategic escalations.</li>
+</p>
+
+To better contribute to SLES 16 adoption, I co-wrote a book with Sergio Ocón Cárdenas & Pablo Iranzo Gómez, with help from our friends at <a href="https://www.packtpub.com/en-es/product/suse-linux-enterprise-server-16-official-administration-guide-9781806021581">Packt</a>, that in a display of originality, we called <a href="https://www.amazon.com/Linux-Enterprise-Server-Official-Administration/dp/1806021595/140-9061893-7224919?psc=1">SUSE Linux Enterprise Server 16 Official Administration Guide</a>.
 
 In 2023, my team's efforts were recognized with the "Business Growth Impact" award, a testament to the +40% growth we brought to the SUSE Manager product line. What a nice product, and what a nice team!.
 
