Fixed paragraph indentation

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ I’ve had the privilege of working across diverse sectors, with really nice peo
 <h3>Where I Am Today</h3>
 Currently, I am the Senior Director of Product Management for Linux at SUSE. It also includes Product Marketing and Operations. It’s a multi-faceted role where I coordinate high-impact products like <a href="https://www.suse.com/products/server/">SUSE Linux Enterprise Server</a>. My daily mission involves:
 
-<p>
+<p style="margin-left:200px; margin-right:50px;">
 <li> Taking care of and leading diverse, distributed teams to drive business growth.</li>
 <li> Managing complex operations and product roadmaps, including the recent launch of <a href="https://www.suse.com/download/sles/">SLES 16</a>.</li>
 <li> Deepening customer intimacy and handling strategic escalations.</li>
