Added extra pic to about

--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@ From the world of defense, I moved into the heart of the open-source community. 
 
 I’ve had the privilege of working across diverse sectors, with really nice people, including manufacturing and retail, which has taught me that while the industry changes, the core challenge remains the same: empowering people through technology.
 
+<figure>
+	<img src="../assets/images/miguel-recording-2018-01.png">
+    <figcaption>Recording training content related to Cloud Migrations.</figcaption>
+</figure>
+
 <h3>Where I Am Today</h3>
 Currently, I am the Senior Director of Product Management for Linux at SUSE. It also includes Product Marketing and Operations. It’s a multi-faceted role where I coordinate high-impact products like <a href="https://www.suse.com/products/server/">SUSE Linux Enterprise Server</a>. My daily mission involves:
 
