--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ I've been around for quite some time, holding now more than 25 years of experien
 I hold a MsC. in Inorganic Chemistry <a href="https://www.uam.es">UAM</a> as well as another MsC. in Computer Science <a href="https://uoc.edu">UOC</a>. You might think "What a waste of time!" ... well in some way it was indeed, however, my roots in science help me keep myself accurate and document everything properly. It's interesting that I managed to go to the same University as the King of Spain and the same High School as the Queen of Spain ... both public institutions.
 
 <figure>
-    <img src="../assets/images/miguel_uco-2024-12.jpg">
+    <img src="../assets/images/about/miguel_uco-2024-12.jpg">
     <figcaption>Talking and listening to students in the Universidad de Córdoba, Spain.</figcaption>
 </figure>
 
@@ -27,7 +27,7 @@ From the world of defense, I moved into the heart of the open-source community. 
 I’ve had the privilege of working across diverse sectors, with really nice people, including manufacturing and retail, which has taught me that while the industry changes, the core challenge remains the same: empowering people through technology.
 
 <figure>
-	<img src="../assets/images/miguel-recording-2018-01.png">
+	<img src="../assets/images/about/miguel-recording-2018-01.png">
     <figcaption>Recording training content related to Cloud Migrations.</figcaption>
 </figure>
 
@@ -43,6 +43,11 @@ Currently, I am the Senior Director of Product Management for Linux at SUSE. It 
 To better contribute to SLES 16 adoption, I co-wrote a book with <a href="https://www.linkedin.com/in/sergioocon/">Sergio Ocón Cárdenas</a> & <a href="https://www.linkedin.com/in/iranzo/">Pablo Iranzo Gómez</a>, with help from our friends at <a href="https://www.packtpub.com/en-es/product/suse-linux-enterprise-server-16-official-administration-guide-9781806021581">Packt</a>, that in a display of originality, we called <a href="https://www.amazon.com/Linux-Enterprise-Server-Official-Administration/dp/1806021595/140-9061893-7224919?psc=1">SUSE Linux Enterprise Server 16 Official Administration Guide</a>.
 
 In 2023, my team's efforts were recognized with the "Business Growth Impact" award, a testament to the +40% growth we brought to the SUSE Manager product line. What a nice product, and what a nice team!.
+
+<figure>
+	<img src="../assets/images/about/miguel_1st_day_suse.png">
+    <figcaption>My first day at the SUSE office in Madrid.</figcaption>
+</figure>
 
 <h3>Beyond the Screen</h3>
 When I’m not scaling enterprise products or diving into Kubernetes (yes, I’m a CKA and CKAD), you can usually find me pursuing my other passions. I’m an always beginning runner, but I also have a musical side. I love playing the bass and guitar, and I even dabble in luthiery (the art of building and fixing them). Whether it's testing a new chemical compound or a new line of code, I’ve always been driven by curiosity.
