Updated about pics

--- a/index.html
+++ b/index.html
@@ -52,4 +52,10 @@ In 2023, my team's efforts were recognized with the "Business Growth Impact" awa
 <h3>Beyond the Screen</h3>
 When I’m not scaling enterprise products or diving into Kubernetes (yes, I’m a CKA and CKAD), you can usually find me pursuing my other passions. I’m an always beginning runner, but I also have a musical side. I love playing the bass and guitar, and I even dabble in luthiery (the art of building and fixing them). Whether it's testing a new chemical compound or a new line of code, I’ve always been driven by curiosity.
 
+
+<figure>
+	<img src="../assets/images/about/miguel_luthier-2024-02.jpg">
+    <figcaption>Tex-Mex Fender Telecaster build (Mexican Tele with Texas Special Pickups).</figcaption>
+</figure>
+
 I’m always looking for new challenges to grow and ways to help others do the same. If you want to talk shop about Linux, open-source strategy, or even the best way to customize a Fender P-Bass, feel free to reach out!.
